; ModuleID = '/home/carl/AnghaBench/radare2/shlr/grub/kern/extr_disk.c_grub_disk_cache_invalidate_all.c'
source_filename = "/home/carl/AnghaBench/radare2/shlr/grub/kern/extr_disk.c_grub_disk_cache_invalidate_all.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.grub_disk_cache = type { i64, i32 }

@GRUB_DISK_CACHE_NUM = common dso_local global i32 0, align 4
@grub_disk_cache_table = common dso_local global %struct.grub_disk_cache* null, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @grub_disk_cache_invalidate_all() #0 {
  %1 = alloca i32, align 4
  %2 = alloca %struct.grub_disk_cache*, align 8
  store i32 0, i32* %1, align 4
  br label %3

3:                                                ; preds = %29, %0
  %4 = load i32, i32* %1, align 4
  %5 = load i32, i32* @GRUB_DISK_CACHE_NUM, align 4
  %6 = icmp ult i32 %4, %5
  br i1 %6, label %7, label %32

7:                                                ; preds = %3
  %8 = load %struct.grub_disk_cache*, %struct.grub_disk_cache** @grub_disk_cache_table, align 8
  %9 = load i32, i32* %1, align 4
  %10 = zext i32 %9 to i64
  %11 = getelementptr inbounds %struct.grub_disk_cache, %struct.grub_disk_cache* %8, i64 %10
  store %struct.grub_disk_cache* %11, %struct.grub_disk_cache** %2, align 8
  %12 = load %struct.grub_disk_cache*, %struct.grub_disk_cache** %2, align 8
  %13 = getelementptr inbounds %struct.grub_disk_cache, %struct.grub_disk_cache* %12, i32 0, i32 0
  %14 = load i64, i64* %13, align 8
  %15 = icmp ne i64 %14, 0
  br i1 %15, label %16, label %28

16:                                               ; preds = %7
  %17 = load %struct.grub_disk_cache*, %struct.grub_disk_cache** %2, align 8
  %18 = getelementptr inbounds %struct.grub_disk_cache, %struct.grub_disk_cache* %17, i32 0, i32 1
  %19 = load i32, i32* %18, align 8
  %20 = icmp ne i32 %19, 0
  br i1 %20, label %28, label %21

21:                                               ; preds = %16
  %22 = load %struct.grub_disk_cache*, %struct.grub_disk_cache** %2, align 8
  %23 = getelementptr inbounds %struct.grub_disk_cache, %struct.grub_disk_cache* %22, i32 0, i32 0
  %24 = load i64, i64* %23, align 8
  %25 = call i32 @grub_free(i64 %24)
  %26 = load %struct.grub_disk_cache*, %struct.grub_disk_cache** %2, align 8
  %27 = getelementptr inbounds %struct.grub_disk_cache, %struct.grub_disk_cache* %26, i32 0, i32 0
  store i64 0, i64* %27, align 8
  br label %28

28:                                               ; preds = %21, %16, %7
  br label %29

29:                                               ; preds = %28
  %30 = load i32, i32* %1, align 4
  %31 = add i32 %30, 1
  store i32 %31, i32* %1, align 4
  br label %3

32:                                               ; preds = %3
  ret void
}

declare dso_local i32 @grub_free(i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
